TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "132721218027584" [label="Start"];
  "132721218027584" -> "132721218031376";
  "132721218031376" [label="Code"];
  "132721218031376" -> "132721218042752";
  "132721218042752" [label="Function"];
  "132721218042752" -> "132721218029600";
  "132721218042752" -> "132721218032672";
  "132721218042752" -> "132721218179504";
  "132721218029600" [label="main IDENTIFIER"];
  "132721218032672" [label="Parameters"];
  "132721218179504" [label="Code"];
  "132721218179504" -> "132721218181904";
  "132721218179504" -> "132721218179168";
  "132721218179504" -> "132721218179552";
  "132721218181904" [label="Declaration"];
  "132721218181904" -> "132721218175376";
  "132721218175376" [label="f IDENTIFIER"];
  "132721218179168" [label="Assignment"];
  "132721218179168" -> "132721218176240";
  "132721218179168" -> "132721218175856";
  "132721218176240" [label="Expr"];
  "132721218176240" -> "132721218175280";
  "132721218176240" -> "132721218176624";
  "132721218175280" [label="* T__6"];
  "132721218176624" [label="Expr"];
  "132721218176624" -> "132721218180848";
  "132721218176624" -> "132721218180416";
  "132721218180848" [label="* T__6"];
  "132721218180416" [label="f IDENTIFIER"];
  "132721218175856" [label="5 INT"];
  "132721218179552" [label="Return"];
  "132721218179552" -> "132721218182624";
  "132721218182624" [label="0 INT"];
}
